# LangChain-Youtube-ChatBot

./: main.py  pyproject.toml  rag.ipynb  requirements.txt
