[project]
name = "langchain-yt-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens>=3.0.1",
    "chromadb>=1.5.9",
    "comm>=0.2.3",
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "python-dotenv>=1.2.2",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.4",
]
